<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Calendar Notifications</string>
    <string name="main_activity_title">Calendar Notifications</string>
    <string name="settings">Settings</string>
    <string name="application_has_no_access">This application needs special permissions to be able to access calendar notifications\n\nPlease grant READ_CALENDAR and WRITE_CALENDAR permissions\n\nWRITE_CALENDAR is required to hide original calendar notification</string>
    <string name="cancel">Cancel</string>
    <string name="empty" translatable="false" />
    <string name="dismiss">Dismiss</string>
    <string name="dismiss_event">Dismiss event</string>
    <string name="snooze">Snooze</string>
    <string name="help_feedback">Help and feedback</string>
    <string name="empty_title">(No title)</string>
    <string name="snooze_event_for">Snooze event for:</string>
    <string name="snooze_all_events_for">Snooze all event(s) for:</string>
    <string name="snooze_preset_15_min">15 minutes</string>
    <string name="snooze_preset_1_hour">1 hour</string>
    <string name="snooze_preset_4_hours">4 hours</string>
    <string name="snooze_preset_1_day">1 day</string>
    <string name="location">Location:</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="change_event_time">Change event time</string>
    <string name="change_event_time_repeating_event">Change event time (creates event copy for repeating events)</string>
    <string name="one_hour_from_now">Move next hour</string>
    <string name="same_time_tomorrow">Move next day</string>
    <string name="next_week_same_day">Move next week</string>
    <string name="move_four_weeks">Move by 4 weeks</string>
    <string name="title_activity_activity_test_buttons_and_to_do" translatable="false">ActivityTestButtonsAndToDo</string>
    <string name="snoozed_until_string">Snoozed until </string>
    <string name="card_view_btn_change">CHANGE</string>
    <string name="card_view_btn_snooze">SNOOZE</string>
    <string name="settings_name">Settings</string>
    <string name="credits_icon_author" translatable="false">Cornmanthe 3rd</string>
    <string name="kotlin_language" translatable="false">Kotlin Language</string>
    <string name="app_created_with">Created with</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="snooze_presets">Snooze settings</string>
    <string name="error_cannot_parse_preset">Sorry, cannot parse your input</string>
    <string name="snooze_presets_title">Snooze Presets</string>
    <string name="snooze_presets_summary">Here you can change default snooze presets</string>
    <string name="error_too_many_presets">Only up to 6 presets are supported, extra presets would be ignored</string>
    <string name="now">now</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="hours">hours</string>
    <string name="hour">hour</string>
    <string name="minutes">minutes</string>
    <string name="minute">minute</string>
    <string name="seconds">seconds</string>
    <string name="second">second</string>
    <string name="no_events_to_display">No event notifications to display\nActive and snoozed notifications would appear here</string>
    <string name="no_calendar_permissions_main">Application has no calendar permissions</string>
    <string name="view_after_edit">View after edit</string>
    <string name="view_after_edit_summary">Enable to automatically view event in the calendar after changing event time using Snooze activity</string>
    <string name="misc_settings">Misc settings</string>
    <string name="theme_setting_title">Theme</string>
    <string name="theme_setting_summary">Choose light, dark, or follow system theme</string>
    <string name="enable_reminders">Enable reminders</string>
    <string name="enable_reminders_summary">If enabled, app would repeatedly remind about active notifications</string>
    <string name="remind_interval">Remind interval</string>
    <string name="invalid_reminder_interval">Reminder interval cannot be zero, reverted to 1 minute</string>
    <string name="max_reminders">Max reminders</string>
    <string name="max_reminders_summary">Maximum number of reminders to fire, 0 for indefinite</string>
    <string name="pebble_notification_title">Calendar</string>
    <string name="projectPageOnGitHub">Project page on GitHub</string>
    <string name="snooze_all">Snooze All</string>
    <string name="change_all">Change All</string>
    <string name="search">Search</string>
    <plurals name="search_placeholder">
      <item quantity="one">Search %1$d %2$s event...</item>
      <item quantity="other">Search %1$d %2$s events...</item>
    </plurals>
    <plurals name="search_placeholder_filtered">
      <item quantity="one">Search %1$d of %2$d %3$s event…</item>
      <item quantity="other">Search %1$d of %2$d %3$s events…</item>
    </plurals>
    <string name="snooze_all_confirmation">Snooze ALL events?\nAlready snoozed would also change snooze time unless snoozed to longer period</string>
    <string name="change_all_notification">This will change snooze time for all events\nContinue?</string>
    <string name="change_filtered_notification">Snooze ALL events matching \"%1$s\"?\nAlready snoozed would also change snooze time unless snoozed to longer period</string>
    <string name="snooze_filtered_confirmation">This will change snooze time for all events matching \"%1$s\"?\nContinue?</string>
    <string name="snooze_all_events">Snooze all events to:</string>
    <string name="change_all_events">Change snooze time for all events:</string>
    <plurals name="snooze_count_text">
        <item quantity="one">%1$d event matching \""%2$s"\" will be snoozed</item>
        <item quantity="other">%1$d events matching \""%2$s"\" will be snoozed</item>
    </plurals>
    <plurals name="snooze_count_text_filtered">
        <item quantity="one">%1$d event matching %2$s will be snoozed</item>
        <item quantity="other">%1$d events matching %2$s will be snoozed</item>
    </plurals>
    <string name="filter_description_search_and_filters">\"%1$s\", %2$s</string>
    <plurals name="filter_calendar_summary">
        <item quantity="one">%1$d calendar</item>
        <item quantity="other">%1$d calendars</item>
    </plurals>
    <string name="snooze_filtered_with_filter_confirmation">Snooze all events matching %1$s?</string>
    <string name="change_filtered_with_filter_confirmation">Change snooze time for all events matching %1$s?\nAlready snoozed would also change unless snoozed to longer period</string>
    <string name="snooze_all_no_events">No events to snooze</string>
    <string name="snooze_all_no_events_filters">No events match your current filters</string>
    <string name="snooze_all_no_events_search">No events match your search</string>
    <string name="snooze_all_no_events_search_and_filters">No events match your search and filters</string>
    <string name="change_snooze_to">Change snooze to:</string>
    <string name="snooze_all_title">Snooze all events</string>
    <string name="change_all_title">Change all events</string>
    <string name="error_cannot_parse_pattern">Cannot parse this pattern</string>
    <string name="quiet_time_from">Quiet time from</string>
    <string name="quiet_time_to">Quiet time to</string>
    <string name="enable_quiet_time">Enable quiet time</string>
    <string name="quiet_hours_section">Quiet hours settings</string>
    <string name="snoozed_time_inside_quiet_hours" formatted="false">NOTE: Next snooze reminder hits quiet time period, no sound or vibration would be played until end of period on %s</string>
    <string name="quiet_hours_summary">Use quiet time to mute all reminders and snoozed event during certain period of time, primary events notifications would still play sound and vibrate (according to settings)</string>
    <string name="quiet_hours_main_activity_status" formatted="false">Quiet hours period is active\nNo reminders until %s</string>
    <string name="hits_quiet_period">(hits quiet period)</string>
    <string name="for_a_custom_time">For a custom period</string>
    <string name="until_specific_time">Until specific time and date</string>
    <string name="snooze_for">Snooze for:</string>
    <string name="selected_time_is_in_the_past"><b>Can\'t snooze:</b><br>selected time is in the past</br></string>
    <string name="title_calendars_activity">Handled Calendars</string>
    <string name="menu_about">About</string>
    <string name="my_react_activity">Data Sync</string>
    <string name="deleted_events">Bin</string>
    <string name="app_behavior">Behavior</string>
    <string name="dismiss_all_events">Dismiss all events</string>
    <string name="mute_all">Mute all</string>
    <string name="start_quiet_hours">Start Quiet Period</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="reminders_section">Reminders</string>
    <string name="car_mode_pref_name">Car mode</string>
    <string name="nav_active">Active</string>
    <string name="nav_upcoming">Upcoming</string>
    <string name="nav_dismissed">Dismissed</string>
    <string name="empty_active">No active notifications</string>
    <string name="filter_time_title">Filter by Time</string>
    <string name="filter_time_all">All</string>
    <string name="filter_time_started_today">Started today</string>
    <string name="filter_time_started_this_week">Started this week</string>
    <string name="filter_time_past">Past (ended)</string>
    <string name="filter_time_started_this_month">Started this month</string>
    <string name="filter_apply">Apply</string>
    <string name="filter_calendar_title">Filter by Calendar</string>
    <string name="filter_calendar_all">All Calendars</string>
    <string name="new_ui_banner_text">Not a fan of the new look? <u>Switch back to classic view</u></string>
    <string name="upcoming_events_category">Upcoming Events</string>
    <string name="upcoming_events_mode_title">Lookahead Mode</string>
    <string name="upcoming_events_day_boundary_hour_title">Day Boundary Hour</string>
    <string name="upcoming_events_fixed_hours_title">Hours to Look Ahead</string>
    <string name="navigation_settings_title">Navigation &amp; UI</string>
    <string name="use_new_navigation_ui_title">New Navigation UI</string>
    <string name="use_new_navigation_ui_summary">Use bottom tabs for Active, Upcoming, and Dismissed events (requires restart)</string>
    <string name="switch_view_category">Quick Switch</string>
    <string name="show_new_ui_banner_title">Show Info Banner</string>
    <string name="show_new_ui_banner_summary">Show the \"Go back to classic view\" banner on the Active events screen</string>
    <string name="switch_to_classic_view_title">Switch to Classic View</string>
    <string name="switch_to_classic_view_summary">Disable new UI and restart with the classic single-list view</string>
    <string name="switch_to_new_view_title">Switch to New View</string>
    <string name="switch_to_new_view_summary">Enable new UI and restart with the tabbed navigation view</string>
    <string name="filter_settings_category">Filters</string>
    <string name="calendar_filter_max_items_title">Max calendars in filter</string>
    <string name="calendar_filter_max_items_summary">Limit calendars shown (use search to find more)</string>
    <string name="filter_snoozed_until_before">Before</string>
    <string name="filter_snoozed_until_after">After</string>
    <string name="filter_snoozed_until_title">Filter by Snoozed Until</string>
    <string name="cancel_selection">Cancel selection</string>
    <string name="select_all">Select all</string>
    <string name="snooze_selected">Snooze selected</string>
</resources>