<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainActivity" >

  <item
    android:id="@+id/action_snooze_all"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:icon="@drawable/ic_update_white_24dp"
    android:orderInCategory="91"
    android:title="@string/snooze_all"
    app:showAsAction="ifRoom" />

  <item
    android:id="@+id/action_search"
    android:icon="@android:drawable/ic_menu_search"
    android:orderInCategory="92"
    android:title="@string/search"
    app:showAsAction="ifRoom|" />

    <item
        android:id="@+id/action_dismissed_events"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/deleted_events" />

    <item android:id="@+id/action_custom_quiet_interval"
        android:orderInCategory="120"
        app:showAsAction="never"
        android:title="@string/start_quiet_hours"
        />

    <item
        android:id="@+id/action_mute_all"
        android:orderInCategory="140"
        app:showAsAction="never"
        android:icon="@drawable/ic_volume_off_white_24dp"
        android:title="@string/mute_all"
        android:visible="false"/>

    <item
        android:id="@+id/action_dismiss_all"
        android:orderInCategory="160"
        app:showAsAction="never"
        android:title="@string/dismiss_all_events" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="180"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"/>


    <item
        android:id="@+id/action_report_a_bug"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/report_a_bug"
        />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="220"
        app:showAsAction="never"
        android:title="@string/menu_about" />
    
    <item
        android:id="@+id/my_react_activity"
        android:orderInCategory="220"
        app:showAsAction="never"
        android:title="@string/my_react_activity" 
        android:visible="false"
        />

    <item
        android:id="@+id/action_test_page"
        android:orderInCategory="10000"
        app:showAsAction="never"
        android:title="Dev page"
        tools:ignore="HardcodedText"
        android:visible="false"
        />
</menu>
