<?xml version="1.0" encoding="utf-8"?>
<!--
    Navigation graph for the main activity's tabbed UI.
    Defines three destinations: Active, Upcoming, and Dismissed events.
-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/activeEventsFragment">

    <fragment
        android:id="@+id/activeEventsFragment"
        android:name="com.github.quarck.calnotify.ui.ActiveEventsFragment"
        android:label="@string/nav_active" />

    <fragment
        android:id="@+id/upcomingEventsFragment"
        android:name="com.github.quarck.calnotify.ui.UpcomingEventsFragment"
        android:label="@string/nav_upcoming" />

    <fragment
        android:id="@+id/dismissedEventsFragment"
        android:name="com.github.quarck.calnotify.ui.DismissedEventsFragment"
        android:label="@string/nav_dismissed" />

</navigation>
